# ColossalCyberAdventureMessages

./: .gitignore  README.rst  build.py  log_in.capnp  log_in.proto  log_in_request.fbs  log_in_request_msg.fbs  log_in_response.fbs  log_in_response_msg.fbs  map_coordinate.fbs  map_coordinates.fbs  map_coordinates.proto  map_vector.proto  pyproject.toml  server_update.proto  server_update_msg.fbs
src/colossalcyberadventuremessages/: __init__.py  client_update.capnp  identification.capnp  server_update.capnp  updates.capnp
