[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "colossalcyberadventuremessages"
authors = [{name = "Amit Goren", email = "animalfarm@mailfence.com"}]
dependencies = [
  "pycapnp ~= 1.3.0"
]
readme = "README.rst"
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/AmitDRITYC0W/ColossalCyberAdventureMessages"
